# style

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml  sgconfig.yml
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
rules/: rust-no-return.yml
src/cathaysia_style/: __init__.py  ast_grep.py  compact_workspace_deps.py  github_workflows.py  line_length.py  move_module.py  qualify_tracing_macros.py
tests/: test_ast_grep.py  test_compact_workspace_deps.py  test_github_workflows.py  test_line_length.py  test_move_module.py  test_qualify_tracing_macros.py
